[package]
name = "span"
version = "0.1.0"
edition = "2024"

[lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[dependencies]
itertools = "0.14.0"
owned_chars = "0.3.2"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.24.0"
#pretty_assertions = "1.4.0"
#rstest = "0.21.0"
